product zigzag overflow mob fix

--- a/assets/section-product-zigzag.css
+++ b/assets/section-product-zigzag.css
@@ -283,6 +283,9 @@
 }
 
 @media(max-width:767px) {
+    .product-zigzag-section {
+        overflow-x: hidden;
+    }
     .product-zigzag__container {
         flex-direction: column;
     }
