--- a/src/modules/product-zigzag/product-zigzag.css
+++ b/src/modules/product-zigzag/product-zigzag.css
@@ -278,6 +278,9 @@
 }
 
 @media(max-width:767px) {
+    .product-zigzag-section {
+        overflow-x: hidden;
+    }
     .product-zigzag__container {
         flex-direction: column;
     }
